cmake_minimum_required(VERSION 3.29.0)
project(Playground C)

set(CMAKE_C_STANDARD 23)
add_executable(Playground main.c)

# Set up our directory structure for output libraries and binaries
if(NOT CMAKE_RUNTIME_OUTPUT_DIRECTORY)
  set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${VTK_BINARY_DIR}/${CMAKE_INSTALL_BINDIR}/install")
endif()
if(NOT CMAKE_LIBRARY_OUTPUT_DIRECTORY)
  set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${VTK_BINARY_DIR}/${CMAKE_INSTALL_LIBDIR}/lib")
endif()
if(NOT CMAKE_ARCHIVE_OUTPUT_DIRECTORY)
  set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${VTK_BINARY_DIR}/${CMAKE_INSTALL_LIBDIR}/bin")
endif()
set_target_properties(
    PROPERTIES
    ARCHIVE_OUTPUT_DIRECTORY "${VTK_BINARY_DIR}/${CMAKE_INSTALL_LIBDIR}"
    LIBRARY_OUTPUT_DIRECTORY "${VTK_BINARY_DIR}/${CMAKE_INSTALL_LIBDIR}"
    RUNTIME_OUTPUT_DIRECTORY "${VTK_BINARY_DIR}/${CMAKE_INSTALL_LIBDIR}"
)
# 실행파일 경로
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${VTK_BINARY_DIR}/${CMAKE_INSTALL_LIBDIR}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${VTK_BINARY_DIR}/${CMAKE_INSTALL_LIBDIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${VTK_BINARY_DIR}/${CMAKE_INSTALL_LIBDIR}/bin)






# 1. create folder ./build
# 2. cd build
# 3. cmake ..
# 4. cmake --build .
# 5. make
